--- a/app_config.json
+++ b/app_config.json
@@ -1,3 +1,3 @@
 {
-  "audioFileProcessingServiceUrl":"https://637911287eb4705cf27ab804.mockapi.io/api/process-audio/audio"
+  "audioFileProcessingServiceUrl":"https://apimocha.com/fgo-voice/test"
 }
