--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  lottie: ^2.0.0
+  file_picker: ^1.13.3
+  path_provider: ^2.0.11
+  permission_handler: ^5.1.0+2
+  record: ^2.1.1
+  http: ^0.13.5
+  http_parser: ^4.0.2
 
 dev_dependencies:
   flutter_test:
@@ -89,3 +96,6 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+  assets:
+    - assets/
