[MM-3] Update URL to dog-voice-prediction API

--- a/app_config.json
+++ b/app_config.json
@@ -1,3 +1,3 @@
 {
-  "audioFileProcessingServiceUrl":"https://apimocha.com/fgo-voice/test"
+  "audioFileProcessingServiceUrl":"https://fastapi-marrmika.cloud.okteto.net/api/predict"
 }
